crates/syntax/tests/snapshots/tokenizer__lexer_escaped bracket string.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    SpannedToken {
        span: 0..35,
        token: LiteralString(
            "string { with } escaped bracket",
        ),
    },
]
