crates/syntax/tests/snapshots/tokenizer__lexer_formatted expr string.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    SpannedToken {
        span: 0..1,
        token: FormatStringStart,
    },
    SpannedToken {
        span: 1..8,
        token: StringContent(
            "string ",
        ),
    },
    SpannedToken {
        span: 35..36,
        token: StringFormatOpen,
    },
    SpannedToken {
        span: 9..17,
        token: Identifier(
            "formated",
        ),
    },
    SpannedToken {
        span: 17..18,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 18..19,
        token: OperatorSubtract,
    },
    SpannedToken {
        span: 19..20,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 20..30,
        token: Identifier(
            "expression",
        ),
    },
    SpannedToken {
        span: 31..33,
        token: StringFormatWidth(
            "03",
        ),
    },
    SpannedToken {
        span: 33..35,
        token: StringFormatPrecision(
            ".5",
        ),
    },
    SpannedToken {
        span: 35..36,
        token: StringFormatClose,
    },
    SpannedToken {
        span: 36..47,
        token: StringContent(
            " expression",
        ),
    },
    SpannedToken {
        span: 47..48,
        token: FormatStringEnd,
    },
]
