crates/syntax/tests/snapshots/tokenizer__lexer_invalid expr string.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    SpannedToken {
        span: 0..1,
        token: Identifier(
            "a",
        ),
    },
    SpannedToken {
        span: 1..2,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 2..3,
        token: OperatorAssignment,
    },
    SpannedToken {
        span: 3..4,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 4..20,
        token: Error(
            UnclosedStringFormat(
                4..20,
            ),
        ),
    },
    SpannedToken {
        span: 20..21,
        token: SigilSemiColon,
    },
    SpannedToken {
        span: 21..22,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 22..23,
        token: Identifier(
            "b",
        ),
    },
    SpannedToken {
        span: 23..24,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 24..25,
        token: OperatorAssignment,
    },
    SpannedToken {
        span: 25..26,
        token: Whitespace(
            " ",
        ),
    },
    SpannedToken {
        span: 26..27,
        token: LiteralInt(
            "1",
        ),
    },
]
