crates/syntax/tests/snapshots/tokenizer__lexer_leading dot.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: lex(input)
---
[
    SpannedToken {
        span: 0..2,
        token: LiteralFloat(
            ".1",
        ),
    },
]
