crates/syntax/tests/snapshots/tokenizer__lexer_multie-line string.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: lex(input)
---
[
    SpannedToken {
        span: 17..18,
        token: Normal(
            String(
                [
                    SpannedToken {
                        span: 1..17,
                        token: String(
                            Content(
                                "plain\n    string",
                            ),
                        ),
                    },
                ],
            ),
        ),
    },
]
