crates/syntax/tests/snapshots/tokenizer__lexer_plain string.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: "lex(input).collect::<Vec<_>>()"
---
[
    SpannedToken {
        span: 0..14,
        token: LiteralString(
            "plain string",
        ),
    },
]
